--- a/xml-ref-test/src/main/resources/about.properties
+++ b/xml-ref-test/src/main/resources/about.properties
@@ -4,3 +4,4 @@ travis.commit=${env.TRAVIS_COMMIT}
 travis.jdk.version=${env.TRAVIS_JDK_VERSION}
 travis.repo.slug=${env.TRAVIS_REPO_SLUG}
 username=${env.USERNAME}
+maven.build.timestamp=${timestamp}
