--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -20,7 +20,7 @@
         <backgroundUpdateAllowed>true</backgroundUpdateAllowed>
 
         <timestamp>${maven.build.timestamp}</timestamp>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <maven.build.timestamp.format>yyyy.MM.dd HH:mm:ss z</maven.build.timestamp.format>
     </properties>
 
     <repositories>
