--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -101,6 +101,14 @@
             <version>${jna.version}</version>
         </dependency>
 
+        <!-- JNLP Download Servlet -->
+        <dependency>
+            <groupId>org.codehaus.mojo.webstart</groupId>
+            <artifactId>webstart-jnlp-servlet</artifactId>
+            <version>1.0-6.0.02_ea_b02.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
@@ -225,12 +233,13 @@
                         <executions>
                             <execution>
                                 <goals>
-                                    <goal>jnlp-inline</goal>
+                                    <goal>jnlp-download-servlet</goal>
                                 </goals>
                                 <phase>package</phase>
                             </execution>
                         </executions>
                         <configuration>
+                            <outputDirectoryName>webstart</outputDirectoryName>
                             <!--outputDirectory></outputDirectory--> <!-- not required?? -->
 
                             <!-- Set to true to exclude all transitive dependencies. Default is false. -->
@@ -275,6 +284,33 @@
                                 <!--jnlpCodebase-->
 
                             </jnlp>
+
+
+                            <!--
+
+                            WAR
+
+                            Part only for the jnlp-download-servlet goal
+
+                            -->
+
+                            <jnlpFiles>
+                                <jnlpFile>
+                                    <templateFilename>template.vm</templateFilename>
+                                    <outputFilename>app.jnlp</outputFilename>
+
+                                    <jarResources>
+                                        <jarResource>
+                                            <groupId>${project.groupId}</groupId>
+                                            <artifactId>${project.artifactId}</artifactId>
+                                            <version>${project.version}</version>
+                                            <!--<classifier>[some optional classifier]</classifier>-->
+                                            <!-- A mainClass element must be specified on one, and only one, jarResource per jnlpFile -->
+                                            <mainClass>${mainClass}</mainClass>
+                                        </jarResource>
+                                    </jarResources>
+                                </jnlpFile>
+                            </jnlpFiles>
 
 
                             <!-- SIGNING -->
@@ -383,6 +419,16 @@
         </extensions>
 
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <webXml>../web-jnlp/src/main/webapp/WEB-INF/web.xml</webXml>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
