--- a/xml-ref-test/src/main/resources/about.properties
+++ b/xml-ref-test/src/main/resources/about.properties
@@ -5,3 +5,4 @@ travis.jdk.version=${env.TRAVIS_JDK_VERSION}
 travis.repo.slug=${env.TRAVIS_REPO_SLUG}
 username=${env.USERNAME}
 maven.build.timestamp=${timestamp}
+maven.jnlpCodebase=${jnlpCodebase}
