--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -45,18 +45,11 @@
     </repositories>
 
     <dependencies>
-        <!--JNLP
 
-           Need it to get the Pin To Taskbar functionality working
-           Windows shortcut needs to contain reference the jar inside
-           of the JNLP Cache
-           -->
         <dependency>
             <groupId>javax.jnlp</groupId>
             <artifactId>jnlp-api</artifactId>
             <version>7.0</version>
-            <scope>system</scope>
-            <systemPath>${java.home}/lib/javaws.jar</systemPath>
         </dependency>
 
         <dependency>
@@ -113,6 +106,7 @@
             <artifactId>jna-platform</artifactId>
             <version>${jna.version}</version>
         </dependency>
+
 
     </dependencies>
 
@@ -503,6 +497,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+
+                </dependencies>
                 <configuration>
                     <verbose>true</verbose>
                     <failOnError>false</failOnError>
