--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -138,6 +138,11 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>openshift-helloworld-mdb-client</groupId>
+            <artifactId>openshift-helloworld-mdb-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
