--- a/openshift-helloworld-mdb-client/src/main/resources/jndi.properties
+++ b/openshift-helloworld-mdb-client/src/main/resources/jndi.properties
@@ -1,10 +1,11 @@
-
 java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
 java.naming.provider.url=remote://localhost:4447
+java.naming.security.principal=remote
+java.naming.security.credentials=remoteJMS
 #java.naming.factory.url.pkgs=org.jboss.ejb.client.naming
 #jboss.naming.client.ejb.context=true
-#jboss.naming.client.jms.context=true
 #remote.connection.default.connect.options.org.xnio.Options.SASL_POLICY_NOANONYMOUS=true
 #remote.connection.default.connect.options.org.xnio.Options.SASL_DISALLOWED_MECHANISMS=JBOSS-LOCAL-USER
 #remote.connection.default.connect.options.org.xnio.Options.SASL_POLICY_NOPLAINTEXT=false
 #log4j.logger.org.jboss.ejb.client=TRACE
+java.naming.factory.url.pkgs=org.jboss.naming.remote.client
