playing with websockets and json client

--- a/jpa-basics-2/pom.xml
+++ b/jpa-basics-2/pom.xml
@@ -10,7 +10,7 @@
     <repositories>
         <repository>
             <id>oss.sonatype.org</id>
-            <name>OSS Sonatype Staging</name>
+            <type>OSS Sonatype Staging</type>
             <url>https://oss.sonatype.org/content/groups/staging</url>
         </repository>
     </repositories>
