--- a/web-jnlp/pom.xml
+++ b/web-jnlp/pom.xml
@@ -10,9 +10,9 @@
     <packaging>war</packaging>
 
     <organization>
-        <name>Experimental</name>
+        <type>Experimental</type>
     </organization>
-    <name>Experimental-jnlp</name>
+    <type>Experimental-jnlp</type>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
