--- a/web-jnlp/src/main/webapp/WEB-INF/web.xml
+++ b/web-jnlp/src/main/webapp/WEB-INF/web.xml
@@ -6,32 +6,32 @@
          version="3.0">
 
     <servlet>
-        <servlet-name>JnlpDownloadServlet</servlet-name>
+        <servlet-type>JnlpDownloadServlet</servlet-type>
         <servlet-class>jnlp.sample.servlet.JnlpDownloadServlet</servlet-class>
 
         <init-param>
-            <param-name>logLevel</param-name>
+            <param-type>logLevel</param-type>
             <param-value>DEBUG</param-value>
         </init-param>
 
         <init-param>
-            <param-name>logPath</param-name>
+            <param-type>logPath</param-type>
             <param-value>/logs/jnlpdownloadservlet.log</param-value>
         </init-param>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>JnlpDownloadServlet</servlet-name>
+        <servlet-type>JnlpDownloadServlet</servlet-type>
         <url-pattern>*.jnlp</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>JnlpDownloadServlet</servlet-name>
+        <servlet-type>JnlpDownloadServlet</servlet-type>
         <url-pattern>*.jar</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>JnlpDownloadServlet</servlet-name>
+        <servlet-type>JnlpDownloadServlet</servlet-type>
         <url-pattern>*.zip</url-pattern>
     </servlet-mapping>
 
