--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
-            <version>2.5.0</version>
+            <version>2.5.1-RC1</version>
         </dependency>
 
         <dependency>
@@ -446,7 +446,9 @@
                         </goals>
                         <configuration>
                             <encoding>utf-8</encoding>
-                            <includes><include>*.properties</include></includes>
+                            <includes>
+                                <include>*.properties</include>
+                            </includes>
                         </configuration>
                     </execution>
                 </executions>
