--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -55,6 +55,7 @@
                 <checksumPolicy>ignore</checksumPolicy>
             </snapshots>
         </repository>
+
     </repositories>
 
     <dependencies>
@@ -150,6 +151,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.jnlp</groupId>
+            <artifactId>jnlp-api-sun</artifactId>
+            <version>7.0</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/lib/deploy.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -548,23 +556,22 @@
             </plugin>
 
 
-            <!-- Disabling, otherwise the JNLP Hack won't compile -->
-            <!--<plugin>-->
-                <!--<artifactId>maven-compiler-plugin</artifactId>-->
-                <!--<version>3.3</version>-->
-                <!--<configuration>-->
-                    <!--<compilerId>jdt</compilerId>-->
-                    <!--<source>1.8</source>-->
-                    <!--<target>1.8</target>-->
-                <!--</configuration>-->
-                <!--<dependencies>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.eclipse.tycho</groupId>-->
-                        <!--<artifactId>tycho-compiler-jdt</artifactId>-->
-                        <!--<version>0.24.0</version>-->
-                    <!--</dependency>-->
-                <!--</dependencies>-->
-            <!--</plugin>-->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <compilerId>jdt</compilerId>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-compiler-jdt</artifactId>
+                        <version>0.24.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
